force-app/main/default/objects/Deal_Sheet__c/Deal_Sheet__c.object-meta.xml
<CustomObject>
    <label>Deal Sheet</label>
    <nameField>
        <displayFormat>DS-{00000}</displayFormat>
        <label>Deal Sheet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>