force-app/main/default/objects/Deal_Sheet__c/fields/ADR__c.field-meta.xml
<CustomField>
    <fullName>ADR__c</fullName>
    <formula>Professional_Service_Fees__c / Total_Billable_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average Daily Rate</inlineHelpText>
    <label>ADR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>