force-app/main/default/objects/Deal_Sheet__c/fields/Average_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Average_Utilization__c</fullName>
    <formula>Total_Billable_Days_ex_MDs__c  / Total_Calendar_Workdays_ex_MDs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>