force-app/main/default/objects/Deal_Sheet__c/fields/AWR__c.field-meta.xml
<CustomField>
    <fullName>AWR__c</fullName>
    <formula>5* ADR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average Weekly Rate</inlineHelpText>
    <label>AWR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>