force-app/main/default/objects/Deal_Sheet__c/fields/Bill_Indirect_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Bill_Indirect_Expenses__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bill Indirect Expenses?</label>
    <type>Checkbox</type>
</CustomField>