force-app/main/default/objects/Deal_Sheet__c/fields/Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Currency__c</fullName>
    <formula>TEXT( CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To change the Billing Currency, click Edit and select a new Currency from the picklist.</inlineHelpText>
    <label>Billing Currency</label>
    <type>Text</type>
</CustomField>