force-app/main/default/objects/Deal_Sheet__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Sheets (Client Contact)</relationshipLabel>
    <relationshipName>Deal_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>