force-app/main/default/objects/Deal_Sheet__c/fields/Contracting_Entity__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Entity__c</fullName>
    <label>Contracting Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LLC (US-based)</fullName>
            </value>
            <value>
                <fullName>GmbH (German-based)</fullName>
            </value>
            <value>
                <fullName>Ulc (Canadian-based)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>