force-app/main/default/objects/Deal_Sheet__c/fields/Create_Delete_Reporting_Balance__c.field-meta.xml
<CustomField>
    <fullName>Create_Delete_Reporting_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create/Delete Reporting Balance</label>
    <type>Checkbox</type>
</CustomField>