force-app/main/default/objects/Deal_Sheet__c/fields/Direct_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Direct_Labor_Cost__c</fullName>
    <label>Direct Labor Cost</label>
    <summarizedField>Deal_Sheet_Line_Item__c.Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Deal_Sheet_Line_Item__c.Role__c</field>
        <operation>notEqual</operation>
        <value>Independent Contractor</value>
    </summaryFilterItems>
    <summaryForeignKey>Deal_Sheet_Line_Item__c.Deal_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>