force-app/main/default/objects/Deal_Sheet__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <summarizedField>Deal_Sheet_Line_Item__c.End_Date__c</summarizedField>
    <summaryForeignKey>Deal_Sheet_Line_Item__c.Deal_Sheet__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>