force-app/main/default/objects/Deal_Sheet__c/fields/Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.pse__Resource_Role__c</field>
            <operation>equals</operation>
            <value>SSA Associate Consultant, SSA Associate Director, SSA Business Analyst, SSA Corporate, SSA Director, SSA Managing Director, SSA Senior Director, SSA Vice President</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Sheets</relationshipLabel>
    <relationshipName>Deal_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>