force-app/main/default/objects/Deal_Sheet__c/fields/Indirect_Expense_Rate__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Expense_Rate__c</fullName>
    <defaultValue>5</defaultValue>
    <inlineHelpText>Please input percentage as a whole number. For example, a 5% rate should be input as 5.</inlineHelpText>
    <label>Indirect Expense Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>