force-app/main/default/objects/Deal_Sheet__c/fields/Indirect_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Expenses__c</fullName>
    <formula>IF( Bill_Indirect_Expenses__c ,Professional_Service_Fees__c * Indirect_Expense_Rate__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indirect Expense Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>