force-app/main/default/objects/Deal_Sheet__c/fields/Managing_Director__c.field-meta.xml
<CustomField>
    <fullName>Managing_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Director</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Six Sigma</value>
        </filterItems>
        <filterItems>
            <field>User.Title</field>
            <operation>contains</operation>
            <value>Managing Director</value>
        </filterItems>
        <filterItems>
            <field>User.Title</field>
            <operation>equals</operation>
            <value>Chief Operations Officer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>