force-app/main/default/objects/Deal_Sheet__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <formula>Professional_Service_Fees__c - Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>