force-app/main/default/objects/Deal_Sheet__c/fields/Margin_Perc__c.field-meta.xml
<CustomField>
    <fullName>Margin_Perc__c</fullName>
    <formula>Margin__c / Professional_Service_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>