force-app/main/default/objects/Deal_Sheet__c/fields/Prevailing_Version__c.field-meta.xml
<CustomField>
    <fullName>Prevailing_Version__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Prevailing Version</label>
    <type>Checkbox</type>
</CustomField>