force-app/main/default/objects/Deal_Sheet__c/fields/Professional_Service_Fees__c.field-meta.xml
<CustomField>
    <fullName>Professional_Service_Fees__c</fullName>
    <label>Professional Services Fees</label>
    <summarizedField>Deal_Sheet_Line_Item__c.Total_Revenue__c</summarizedField>
    <summaryForeignKey>Deal_Sheet_Line_Item__c.Deal_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>