force-app/main/default/objects/Deal_Sheet__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>pse__Proj__c.pse__Region__r.Name</field>
            <operation>contains</operation>
            <value>SSA</value>
        </filterItems>
        <filterItems>
            <field>pse__Proj__c.pse__Project_Type__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Deal Sheets</relationshipLabel>
    <relationshipName>Deal_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>