force-app/main/default/objects/Deal_Sheet__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Deal Sheet Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>