force-app/main/default/objects/Deal_Sheet__c/fields/Project_Risks__c.field-meta.xml
<CustomField>
    <fullName>Project_Risks__c</fullName>
    <label>Project Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>