force-app/main/default/objects/Deal_Sheet__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <summarizedField>Deal_Sheet_Line_Item__c.Start_Date__c</summarizedField>
    <summaryForeignKey>Deal_Sheet_Line_Item__c.Deal_Sheet__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>