force-app/main/default/objects/Deal_Sheet__c/fields/Total_Billable_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Days__c</fullName>
    <label>Total Billable Days</label>
    <summarizedField>Deal_Sheet_Line_Item__c.Billable_Days__c</summarizedField>
    <summaryForeignKey>Deal_Sheet_Line_Item__c.Deal_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>