force-app/main/default/objects/Deal_Sheet__c/fields/Total_Calendar_Workdays_ex_MDs__c.field-meta.xml
<CustomField>
    <fullName>Total_Calendar_Workdays_ex_MDs__c</fullName>
    <inlineHelpText>Excludes MDs</inlineHelpText>
    <label>Total Calendar Workdays ex. MDs</label>
    <summarizedField>Deal_Sheet_Line_Item__c.Calendar_Days__c</summarizedField>
    <summaryFilterItems>
        <field>Deal_Sheet_Line_Item__c.Line_Type__c</field>
        <operation>equals</operation>
        <value>Resource</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Deal_Sheet_Line_Item__c.Role__c</field>
        <operation>notEqual</operation>
        <value>Managing Director</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Deal_Sheet_Line_Item__c.Billable_Days__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Deal_Sheet_Line_Item__c.Deal_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>