force-app/main/default/objects/Deal_Sheet__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>Deal_Sheet_Line_Item__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Deal_Sheet_Line_Item__c.Deal_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>