force-app/main/default/objects/Deal_Sheet__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <formula>(Total_Billable_Days__c)*8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>