force-app/main/default/objects/Deal_Sheet__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <formula>Professional_Service_Fees__c +  Indirect_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>