force-app/main/default/objects/Deal_Sheet__c/fields/VRB_Approved__c.field-meta.xml
<CustomField>
    <fullName>VRB_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VRB Approved</label>
    <type>Checkbox</type>
</CustomField>