force-app/main/default/objects/Deal_Sheet__c/listViews/My_Deal_Sheets.listView-meta.xml
<ListView>
    <fullName>My_Deal_Sheets</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Engagement_Manager__c</columns>
    <columns>Professional_Service_Fees__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Margin__c</columns>
    <columns>Margin_Perc__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Deal Sheets</label>
</ListView>