force-app/main/default/objects/Deal_Sheet__c/listViews/VRB_Deal_Sheet.listView-meta.xml
<ListView>
    <fullName>VRB_Deal_Sheet</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Professional_Service_Fees__c</columns>
    <columns>Margin_Perc__c</columns>
    <columns>Managing_Director__c</columns>
    <columns>Engagement_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Pending VRB Approval</label>
</ListView>